Remove slightly-broken edit outfit links from user outfits page
The URL anchors were getting like. double-encoded? The `closet[]` part
was encoding as `closet%255B%255D`. Maybe a thing in Rails, where you
need to mark them `html_safe` to insert them in a URL like that?

Well anyway, those URLs are redundant now, I just have it link straight
to the same outfit page as the big link!

--- a/app/views/outfits/_outfit.html.haml
+++ b/app/views/outfits/_outfit.html.haml
@@ -7,7 +7,7 @@
     = link_to outfit.name, outfit, :class => 'outfit-name'
   
   %footer
-    = link_to_edit_outfit t('.edit'), outfit, :class => 'outfit-edit-link'
+    = link_to t('.edit'), outfit, :class => 'outfit-edit-link'
     = button_to t('.delete'), outfit, :method => 'delete',
                 :class => 'outfit-delete-button',
                 :confirm => t('.delete_confirmation',
