Update most URLs to use HTTPS
I noticed we didn't have the little lock icon in the browser, and yeah
huh there's a lot of `http://` still floating around! Let's fix that!

--- a/app/views/closet_hangers/petpage.html.haml
+++ b/app/views/closet_hangers/petpage.html.haml
@@ -5,7 +5,7 @@
 #intro
   %p= t '.description'
   %p= twl '.instructions',
-        :edit_petpage_link_url => 'http://www.neopets.com/edithomepage.phtml'
+        :edit_petpage_link_url => 'https://www.neopets.com/edithomepage.phtml'
 
 = form_tag petpage_user_closet_hangers_path(@user), :method => :get, :id => 'petpage-closet-lists' do
   = hidden_field_tag 'filter', '1'
