--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -60,8 +60,8 @@
           %noscript= submit_tag 'Go'
           
         %ul
-          %li= link_to t('organization_name'), 'http://openneo.net/'
-          %li= link_to t('.footer.blog'), 'http://blog.openneo.net/'
+          %li= link_to t('organization_name'), 'https://openneo.net/'
+          %li= link_to t('.footer.blog'), 'https://blog.openneo.net/'
           %li= link_to t('.footer.source_code'), 'https://github.com/openneo/impress'
           %li= link_to t('.footer.terms'), terms_path
         
