--- a/app/views/layouts/items.html.haml
+++ b/app/views/layouts/items.html.haml
@@ -4,7 +4,7 @@
 - content_for :before_flashes do
   %h1
     = link_to items_path do
-      = image_tag 'http://images.neopets.com/items/mall_floatingneggfaerie.gif'
+      = image_tag 'https://images.neopets.com/items/mall_floatingneggfaerie.gif'
       %span= t 'infinite_closet'
 - content_for :content do
   = form_tag items_path, :method => :get do
