--- a/app/views/outfits/new.html.haml
+++ b/app/views/outfits/new.html.haml
@@ -65,7 +65,7 @@
     
   %li
     = link_to bulk_pets_path do
-      = image_tag 'http://images.neopets.com/items/mall_ac_garland_spotlight.gif'
+      = image_tag 'https://images.neopets.com/items/mall_ac_garland_spotlight.gif'
     %h3= link_to t('modeling_hub'), bulk_pets_path
     %div
       %h4= t '.modeling_hub.tagline'
