--- a/app/views/pets/bulk.html.haml
+++ b/app/views/pets/bulk.html.haml
@@ -68,7 +68,7 @@
   
   %script#bulk-pets-submission-template{:type => 'text/x-jquery/tmpl'}
     %li.waiting
-      %img{:src => 'http://pets.neopets.com/cpn/${pet_name}/1/1.png'}
+      %img{:src => 'https://pets.neopets.com/cpn/${pet_name}/1/1.png'}
       %span.name ${pet_name}
       %span.waiting-message= t '.bulk_pets.waiting'
       %span.loading-message= t '.bulk_pets.loading'
