--- a/app/views/static/image_mode.html.haml
+++ b/app/views/static/image_mode.html.haml
@@ -49,11 +49,11 @@
   Downloading currently only works for modern browsers that support the new
   canvas feature. It is, however, supported in the latest versions of,
 
-  * [Google Chrome](http://www.google.com/chrome)
-  * [Mozilla Firefox](http://www.firefox.com/)
-  * [Opera](http://www.opera.com/)
-  * [Safari](http://www.apple.com/safari/)
-  * [Internet Explorer](http://www.microsoft.com/ie)
+  * [Google Chrome](https://www.google.com/chrome)
+  * [Mozilla Firefox](https://www.firefox.com/)
+  * [Opera](https://www.opera.com/)
+  * [Safari](https://www.apple.com/safari/)
+  * [Internet Explorer](https://www.microsoft.com/ie)
 
   However, Internet Explorer currently is having trouble running Dress to
   Impress in general, so is not recommended.
