--- a/app/assets/stylesheets/campaigns/_show.sass
+++ b/app/assets/stylesheets/campaigns/_show.sass
@@ -191,7 +191,7 @@ body.campaigns-show, body.campaigns-current
         width: $outfit-inner-width
 
       &.banner
-        background-image: url(http://images.neopets.com/themes/004_bir_a2e60/footer_bg.png)
+        background-image: url(https://images.neopets.com/themes/004_bir_a2e60/footer_bg.png)
         background-position: 0 -60px
         border: 2px solid #006
         color: white
