--- a/app/views/closet_hangers/index.html.haml
+++ b/app/views/closet_hangers/index.html.haml
@@ -150,7 +150,7 @@
       -# TODO: remove me?
 
 - content_for :stylesheets do
-  = stylesheet_link_tag 'http://ajax.googleapis.com/ajax/libs/jqueryui/1.9.0/themes/south-street/jquery-ui.css'
+  = stylesheet_link_tag 'https://ajax.googleapis.com/ajax/libs/jqueryui/1.9.0/themes/south-street/jquery-ui.css'
 
 - content_for :javascripts do
   = include_javascript_libraries :jquery, :jquery_tmpl
