--- a/app/views/sitemap/index.xml.haml
+++ b/app/views/sitemap/index.xml.haml
@@ -1,8 +1,8 @@
 !!! XML
-%urlset{:xmlns => "http://www.sitemaps.org/schemas/sitemap/0.9"}
+%urlset{:xmlns => "https://www.sitemaps.org/schemas/sitemap/0.9"}
   - for item in @items
     %url
-      %loc http://#{request.host_with_port}#{url_for(item)}
+      %loc https://#{request.host_with_port}#{url_for(item)}
       %changefreq monthly
       %priority 0.5
 
