Use the main app for outfit saving, not impress-2020
This came in a few parts!
1. Add meta tags to let us know we're logged in.
2. Install React Query, which has the data-loading sensibilities I like
   about Apollo without the GraphQL that has honestly been a drag.
3. Replace the outfit-loading and outfit-saving calls with API calls to
   the main app.
4. Update the main app's API calls to use our more flexible data
   constructs like "pose".

Would've loved to do this more incrementally, but it's hard to! You
can't split out outfit-loading and outfit-saving, or auth from any of
that, or the state gets all out-of-sorts.

Still, this is a good nugget we've pulled out all-in-all, and one that
people have been asking for! Can maybe look to logged-in item search
soon too, for own/want data?

--- a/app/views/outfits/edit.html.haml
+++ b/app/views/outfits/edit.html.haml
@@ -18,5 +18,7 @@
     = stylesheet_link_tag 'fonts'
     = javascript_include_tag 'wardrobe-2020-page', defer: true
     = open_graph_tags
+    = csrf_meta_tags
+    %meta{name: 'dti-current-user-id', content: user_signed_in? ? current_user.id : "null"}
   %body
     #wardrobe-2020-root
