Add posted-at date to Pardon Our Dust page
Just to like. clarify how up-to-date it is and isn't!

--- a/app/assets/stylesheets/static/_pardon_our_dust.sass
+++ b/app/assets/stylesheets/static/_pardon_our_dust.sass
@@ -1,6 +1,15 @@
 body.static-pardon_our_dust
   .header-image
     max-width: 100%
+
+  .post-header
+    margin-bottom: 1em
+
+    h1
+      margin-bottom: .125em
+
+    .posted-at
+      font-size: 75%
   
   main
     ul
