--- a/app/views/static/pardon_our_dust.html.haml
+++ b/app/views/static/pardon_our_dust.html.haml
@@ -4,7 +4,9 @@
 = image_tag 'pardon-our-dust/header.png', class: 'header-image',
   alt: 'Fyora directing a Yurble worker, as other faeries help rebuild Faerieland in the background'
 
-%h1#title Pardon our dust!
+%header.post-header
+  %h1#title Pardon our dust!
+  .posted-at Posted by Matchu on October 12, 2023
 
 %main
   :markdown
