Remove no-op item.thumbnail.secure_url
There was a time when I used an old proxy server to try to fix mixed
content issues, and I eventually removed it but never took the tendrils
out from the code.

We probably _should_ figure out how to secure these URLs! But until
then, we may as well simplify the code.

--- a/app/views/items/show.html.haml
+++ b/app/views/items/show.html.haml
@@ -2,7 +2,7 @@
 - canonical_path @item
 
 %header#item-header
-  = image_tag @item.thumbnail.secure_url, :id => 'item-thumbnail'
+  = image_tag @item.thumbnail_url, :id => 'item-thumbnail'
   %div
     %h2#item-name= @item.name
     = nc_icon_for(@item)
