Remove old feedback UserVoice link

--- a/app/views/closet_hangers/_help.en.html.haml
+++ b/app/views/closet_hangers/_help.en.html.haml
@@ -23,13 +23,7 @@
     <span class="edit-contact-link">add your Neopets username</span> so that
     when other users come here they know how to contact you.
 
-    **Have fun!** If you have any [neat ideas][suggestions] or [general praise and
-    bug reports][mail], we love to hear them. And, if you enjoy this feature,
-    [please consider donating to keep Dress to Impress running and improving][donate].
-    Thanks!
+    **Have fun!**
 
-    [donate]: #{donate_path}
     [ic]: #{items_path}
-    [mail]: mailto:#{contact_email}
-    [suggestions]: #{feedback_url}
     [uft]: #{new_user_closet_list_path(user, :closet_list => {:hangers_owned => true, :name => 'Up For Trade', :visibility => ClosetVisibility[:trading].id})}
